# django-rest-framework-jwt

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  authentication.py  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  serializers.py  settings.py  setup.cfg  setup.py  sitemap.xml  tox.ini  utils.py  views.py
.github/workflows/: codeql-analysis.yml
changelog.d/: 14.bugfix.md  15.bugfix.md  18.feature.md  2.misc.md  20.feature.md  22.bugfix.md  23.doc.md  24.doc.md  24.misc.md  26.feature.md  27.feature.md  27.removal.md  28.misc.md  29.feature.md  3.misc.md  33.feature.md  35.bugfix.md  37.bugfix.md  39.bugfix.md  40.bugfix.md  41.bugfix.md  45.bugfix.md  48.bugfix.md  48.misc.md  49.bugfix.md  50.feature.md  6.misc.md  7.misc.md  9.feature.md
demo/: manage.py
demo/app/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
demo/app/migrations/: 0001_initial.py
demo/demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/demo/settings/: base.py  dev.py  test.py
docs/: index.md
docs/css/: extra.css
mkdocs/: search_index.json
requirements/: optionals.txt  packaging.txt  testing.txt
rest_framework_jwt/: __init__.py  admin.py  authentication.py  compat.py  credentials.py  jwt.py  models.py  serializers.py  settings.py  test.py  utils.py  views.py
rest_framework_jwt/blacklist/: admin.py  models.py  serializers.py  utils.py  views.py
rest_framework_jwt/locale/de/LC_MESSAGES/: django.mo  django.po
rest_framework_jwt/locale/en_US/LC_MESSAGES/: django.po
rest_framework_jwt/locale/es/LC_MESSAGES/: django.po
rest_framework_jwt/locale/pl/LC_MESSAGES/: django.mo  django.po
rest_framework_jwt/locale/pt_BR/LC_MESSAGES/: django.po
rest_framework_jwt/migrations/: 0001_initial.py
rest_framework_jwt/refreshtoken/: authentication.py  models.py  permissions.py  routers.py  serializers.py  views.py
rest_framework_jwt/refreshtoken/migrations/: 0001_initial.py  0002_auto_20150515_0948.py
rest_framework_jwt/runtests/: models.py  runtests.py  settings.py  urls.py
rest_framework_jwt/tests/: simtime.py  test_authentication.py  test_serializers.py  test_utils.py  test_views.py
src/rest_framework_jwt/: __init__.py  authentication.py  compat.py  permissions.py  serializers.py  settings.py  utils.py  views.py
src/rest_framework_jwt/blacklist/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  views.py
src/rest_framework_jwt/blacklist/migrations/: 0001_initial.py  0002_auto_20191217_1555.py
src/rest_framework_jwt/locale/en_US/LC_MESSAGES/: django.po
tests/: conftest.py  models.py  settings.py  test_authentication.py  test_compat.py  test_long_refresh_token_views.py  test_serializers.py  test_settings.py  test_utils.py  test_views.py  urls.py  utils.py  views.py
tests/views/: conftest.py  test_authentication.py  test_blacklist.py  test_impersonation.py  test_integration.py  test_refresh.py  test_verification.py
