[metadata]
name = drf-jwt
version = attr: rest_framework_jwt.__version__
description = JSON Web Token based authentication for Django REST framework
long_description = file: README.md
keywords = Styria CMS, JSON API
author = Styria Digital
author_email = digital-development@styria.hr
license = MIT
license_file = LICENSE
url = https://github.com/Styria-Digital/django-rest-framework-jwt
platforms = POSIX, Microsoft, MacOS
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP

[paths]
source =
   src/rest_framework_jwt
   .tox/*/lib/python*/site-packages/rest_framework_jwt

[options]
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
zip_safe = False
include_package_data = True
install_requires =
    PyJWT>=1.5.2,<2.0.0
    Django>=1.11
    djangorestframework>=3.7

[options.extras_require]
dev =
    tox
lint =
    isort
    black
    flake8
test =
    mock
    pytest>=3.0
    pytest-cov
    pytest-django
    pytest-runner
    cryptography==2.0.3
docs =
    mkdocs==0.13.2

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[tool:pytest]
DJANGO_SETTINGS_MODULE=demo.settings.test
addopts =
    --cov-config .coveragerc
    --cov-report term
    -p no:warnings
django_find_project = false
testpaths = tests

[coverage:run]
branch = True
source = rest_framework_jwt

[coverage:report]
show_missing = True
omit =
    .tox/*
    rest_framework_jwt/migrations/*
    tests/*
    setup.py

[coverage:paths]
source =
    src/

[isort]
# Reference: https://github.com/timothycrosley/isort/wiki/isort-Settings
atomic=true
force_grid_wrap=0
include_trailing_comma=true
multi_line_output=3
line_length=79
lines_after_imports=2
lines_between_types=1
known_django=django
known_rest_framework=rest_framework
known_third_party=mock,pytz,faker,model_utils,responses,factory
known_first_party=rest_framework_jwt
skip=.git,__pycache__,docs,.tox,migrations,requirements,venv,.venv,wsgi.py,bin,changelogs,example
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,REST_FRAMEWORK,FIRSTPARTY,LOCALFOLDER
use_parentheses=True
